# GpuPDF

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  vcpkg.json
cmake/: Warnings.cmake
src/: GLRenderer.cpp  GLRenderer.hpp  GraphicsState.cpp  GraphicsState.hpp  MouseEvents.hpp  PDFDocument.cpp  PDFDocument.hpp  PDFObject.cpp  PDFObject.hpp  PDFStreamFinder.cpp  PDFStreamFinder.hpp  PDFStreamReader.cpp  PDFStreamReader.hpp  PDFreader.cpp  PDFreader.hpp  Path.cpp  Path.hpp  Polyline.cpp  Polyline.hpp  SubPath.cpp  SubPath.hpp  Window.cpp  Window.hpp  main.cpp
src/OpenGL/: Buffer.cpp  Buffer.hpp  Error.cpp  Error.hpp  GlewInitializer.cpp  GlewInitializer.hpp  Program.cpp  Program.hpp  Renderer.cpp  Renderer.hpp  VertexArray.cpp  VertexArray.hpp
src/math/: EnumFlagOperators.hpp  Matrix.hpp  Numbers.hpp  Rectangle.hpp  Triangle.hpp  Vector.hpp
